2011-08-23	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	* Makefile.am: Removed console.c and linked to the shared console.c.
	Note: This change was verified through compilation only.
	* console/console.c: Removed.

2011-06-07	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* configure.ac: Use standard cache BSP options.

2011-05-17	Till Straumann <strauman@slac.stanford.edu>

	PR1797/bsps
	* configure.ac: Made CONFIGURE_MALLOC_BSP_SUPPORTS_SBRK
	a bspopts.h setting.

2011-03-04	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1751/bsps
	* start/start.S: Fix typo which was not caught by binutils prior to a
	recent bug fix.

2011-02-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console/console.c, console/ns16550cfg.c, console/polled_io.c,
	include/bsp.h, include/tm27.h, startup/bspstart.c:
	Use "__asm__" instead of "asm" for improved c99-compliance.

2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.68, automake-1.11.1.

2010-08-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1686/bsps
	* console/console.c: Add BSP_poll_char.

2010-08-15	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* console/polled_io.c: Add BSP_poll_char.

2010-06-29	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Remove AC_CHECK_SIZEOF([void *]).

2010-06-29	Joel Sherrill <Joel.Sherrill@OARcorp.com>

	* configure.ac: Added AC_CHECK_SIZEOF macro.

2009-12-16      Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* start/start.S: removed obsolete bootcard calling warning

2009-12-16      Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* console/mc68360_scc.c: adapted to new prototype for *_write
	function

2009-10-22	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* Makefile.am, preinstall.am: Update for exception support changes.
	* irq/irq_init.c, irq/openpic_xxx_irq.c: Changed exception header file
	includes.
	* startup/bspstart.c: Update for ppc_exc_initialize() changes.
