@@ -52,7 +52,8 @@ include_bsp_HEADERS = ../../powerpc/shared/console/uart.h \
 # console
 libbsp_a_SOURCES += ../../shared/console.c console/ns16550cfg.c \
     console/mc68360_scc.c console/rsPMCQ1.c console/alloc360.c \
-    console/init68360.c
+    console/init68360.c console/config.c console/printk_support.c \
+    console/config.c
 
 include_bsp_HEADERS += ../../powerpc/shared/openpic/openpic.h
 # openpic
